<resources>
    <string name="app_name">PlayRaonChild</string>
    <string name="id">id</string>
    <string name="ID">ID</string>
    <string name="password">비밀번호</string>
    <string name="registration">등록</string>
    <string name="available">사용 가능</string>
    <string name="no_available">사용 금지</string>
    <string name="parent_phone_number">부모 전화번호</string>
    <string name="over_8_char">8 자리 이상</string>
    <string name="accessibility_service_label">App Lock</string>
    <string name="accessibility_service_description">앱잠금 기능이 입니다. 사용으로 설정하면 Play Raon 에서 설정한 앱 이외의 앱은 잠금이 됩니다.
    이기능은 어떠한 개인 정보를 수집하지 않습니다.
    </string>
</resources>
