<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/parent_id"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                android:text="@string/ID"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edTxtParentPhoneNumber"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                android:ems="10"
                android:hint="@string/parent_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/TextViewPassword"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                android:text="@string/password"
                android:textSize="20dp">

            </TextView>

            <EditText
                android:id="@+id/edTxtPassword"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:hint="@string/over_8_char"
                android:maxLength="15"
                android:textSize="18sp">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegist"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorBtn"
                android:text="@string/registration"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"

            >
            <Button
                android:id="@+id/btnAvailable"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:background="@color/colorBtn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                android:text="@string/available"
                />
            <Button
                android:id="@+id/btnNoAvailable"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:background="@color/colorBtn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                android:text="@string/no_available"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
</RelativeLayout>
